[gd_scene load_steps=46 format=3 uid="uid://cxnlx6jgjsagx"]

[ext_resource type="Script" uid="uid://blcq4kadm2k3g" path="res://Mobs/mushroom.gd" id="1_selrt"]
[ext_resource type="Texture2D" uid="uid://q7yurg01e7xl" path="res://assets/Mushroom/Attack.png" id="1_sjuu0"]
[ext_resource type="Texture2D" uid="uid://d2nod5mi16ld4" path="res://assets/Mushroom/Take Hit.png" id="2_selrt"]
[ext_resource type="Texture2D" uid="uid://b5jpi24tmlnn6" path="res://assets/Mushroom/Death.png" id="3_ufykn"]
[ext_resource type="Texture2D" uid="uid://dx7hanvkr280e" path="res://assets/Mushroom/Idle.png" id="4_xshu0"]
[ext_resource type="Texture2D" uid="uid://up5mj18jbtbt" path="res://assets/Mushroom/Run.png" id="5_3ua80"]
[ext_resource type="PackedScene" uid="uid://koto5xn15icb" path="res://scn/damageBox/damage_box.tscn" id="7_ufykn"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wr5pi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mbs7r"]
atlas = ExtResource("1_sjuu0")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gwmg"]
atlas = ExtResource("1_sjuu0")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_eeiv3"]
atlas = ExtResource("1_sjuu0")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_11t0p"]
atlas = ExtResource("1_sjuu0")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_fco54"]
atlas = ExtResource("1_sjuu0")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qj5l"]
atlas = ExtResource("1_sjuu0")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_maw5c"]
atlas = ExtResource("1_sjuu0")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_awyqj"]
atlas = ExtResource("1_sjuu0")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ovua"]
atlas = ExtResource("2_selrt")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6upu"]
atlas = ExtResource("2_selrt")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2lam"]
atlas = ExtResource("2_selrt")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_fesgl"]
atlas = ExtResource("2_selrt")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_65uji"]
atlas = ExtResource("3_ufykn")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_xer1d"]
atlas = ExtResource("3_ufykn")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hnkb"]
atlas = ExtResource("3_ufykn")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6kjb"]
atlas = ExtResource("3_ufykn")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofke6"]
atlas = ExtResource("4_xshu0")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpll8"]
atlas = ExtResource("4_xshu0")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_okwxm"]
atlas = ExtResource("4_xshu0")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_2a46u"]
atlas = ExtResource("4_xshu0")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6d12"]
atlas = ExtResource("5_3ua80")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ri3e6"]
atlas = ExtResource("5_3ua80")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyw35"]
atlas = ExtResource("5_3ua80")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_2r1jm"]
atlas = ExtResource("5_3ua80")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_l61rm"]
atlas = ExtResource("5_3ua80")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqgnm"]
atlas = ExtResource("5_3ua80")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_vaypk"]
atlas = ExtResource("5_3ua80")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ns624"]
atlas = ExtResource("5_3ua80")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_mcfeu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbs7r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gwmg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eeiv3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11t0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fco54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qj5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_maw5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awyqj")
}],
"loop": false,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ovua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6upu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2lam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fesgl")
}],
"loop": false,
"name": &"Damage",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_65uji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xer1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hnkb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6kjb")
}],
"loop": false,
"name": &"Death",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofke6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpll8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_okwxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2a46u")
}],
"loop": true,
"name": &"Idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6d12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ri3e6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyw35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2r1jm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l61rm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqgnm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vaypk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ns624")
}],
"loop": false,
"name": &"Run",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_t8xny"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Attack"]
}

[sub_resource type="Animation" id="Animation_ftgsq"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Damage"]
}

[sub_resource type="Animation" id="Animation_n15r3"]
length = 0.6666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.16666667, 0.33333334, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Death"]
}

[sub_resource type="Animation" id="Animation_gx20p"]
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Idle"]
}

[sub_resource type="Animation" id="Animation_nheyp"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Run"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v574n"]
_data = {
&"Attack": SubResource("Animation_t8xny"),
&"Damage": SubResource("Animation_ftgsq"),
&"Death": SubResource("Animation_n15r3"),
&"Idle": SubResource("Animation_gx20p"),
&"Run": SubResource("Animation_nheyp")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_selrt"]
size = Vector2(13, 17)

[sub_resource type="CircleShape2D" id="CircleShape2D_ufykn"]
radius = 8.0

[node name="Mushroom" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_selrt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 11)
shape = SubResource("CapsuleShape2D_wr5pi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_mcfeu")
animation = &"Attack"
frame = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_v574n")
}
autoplay = "Idle"

[node name="AttacDirection" type="Node2D" parent="."]

[node name="AttackRange" type="Area2D" parent="AttacDirection"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttacDirection/AttackRange"]
visible = false
position = Vector2(14.5, 9)
shape = SubResource("RectangleShape2D_selrt")

[node name="DamageBox" parent="AttacDirection" instance=ExtResource("7_ufykn")]

[node name="HurtBox" parent="AttacDirection/DamageBox" index="0"]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" parent="AttacDirection/DamageBox/HurtBox" index="0"]
position = Vector2(-1, 11)

[node name="HitBox" parent="AttacDirection/DamageBox" index="1"]
position = Vector2(0, 5)
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" parent="AttacDirection/DamageBox/HitBox" index="0"]
position = Vector2(16, 5)
shape = SubResource("CircleShape2D_ufykn")

[connection signal="body_entered" from="AttacDirection/AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="area_entered" from="AttacDirection/DamageBox/HitBox" to="." method="_on_hit_box_area_entered"]

[editable path="AttacDirection/DamageBox"]
